# MrNine.Net

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  TODO-DEPLOY-GATEWAY.md  auth.ts  drizzle.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vercel.json  verify-cards.mjs  verify-mobile.mjs
.claude/: repair-imports.mjs  settings.local.json  swap-json.mjs  wrap-routes.mjs
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: AIPlaygroundShell.tsx  AIStoreShell.tsx  AdminShell.tsx  AmbientParticles.tsx  AnalyticsDashboard.tsx  ApiGatewayHeader.tsx  AuthSessionProvider.tsx  CalculatorsShell.tsx  CircuitBoard.tsx  DiscordActivity.tsx  DocSenseShell.tsx  FuturisticHero.tsx  GlobalShortcuts.tsx  HeroScene.tsx  HexButton3D.tsx  HologramColumns.tsx  HomeCommandSurface.tsx  LanguageProvider.tsx  LanguageTutorShell.tsx  MarketsShell.tsx  MysticDeckShell.tsx  OnboardingOverlay.tsx  PhotoFixShell.tsx  ProfileShell.tsx  ServiceWorkerRegister.tsx  SmartRecapShell.tsx  StoryForgeStudioShell.tsx  StoryWriterShell.tsx  TabAudioVisualizer.tsx  ToolsShell.tsx  TopNav.tsx  TyndallBeams.tsx  VideoStudioShell.tsx  VoiceStudioShell.tsx
drizzle/: 0001_low_balance.sql  0002_coupons.sql  0003_user_webhooks.sql  0004_webhook_deliveries.sql  0005_session_id.sql  0006_audit_log.sql  0007_referral.sql  0008_digest.sql  0009_telegram.sql  0010_spend_limits.sql  0012_totp.sql  (+1 more)
sdk-py/: .gitignore  README.md  pyproject.toml
sdk-py/mrnine/: __init__.py
(+233 files in other folders)
