[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrnine"
version = "0.1.0"
description = "Python SDK cho MrNine API gateway (https://api.mrnine.net)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MrNine", email = "hello@mrnine.net" }]
keywords = ["openai", "mrnine", "ai", "gateway", "vietnam"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["httpx>=0.27,<1.0"]

[project.urls]
Homepage = "https://mrnine.net"
Repository = "https://github.com/nguy3nhuunam/MrNine.Net"
Documentation = "https://mrnine.net/api-docs"

[tool.hatch.build.targets.wheel]
packages = ["mrnine"]

[tool.hatch.build.targets.sdist]
include = ["mrnine", "README.md", "pyproject.toml"]
